# PJC

./: CMakeLists.txt
Projekt/: VaultRecord.cpp  VaultRecord.h  enum.h  myCrypt.cpp  myCrypt.h  test.cpp  vaultRecord.cpp
Projekt/category/: CategoryManager.cpp  CategoryManager.h  category
Projekt/cipher/: myCrypt.cpp  myCrypt.h
Projekt/comparator/: Comparator.cpp  Comparator.h
Projekt/filesManager/: File.cpp  File.h  FilesManager.cpp  FilesManager.h
Projekt/interface/: Interface.cpp  Interface.h
Projekt/records/: VaultRecord.cpp  VaultRecord.h
W01/: W01.cpp  W01.h
W02/: W02.cpp  W02.h
W03/: main.cpp
W03/Z01/: main.cpp
W03/Z02/: main.cpp
W04/: main.cpp
W04/Z01/: main.cpp
W04/Z02/: main.cpp
W04/Z03/: main.cpp
W05/: main.cpp
W05/Z01/: main.cpp
W6/: main.cpp  main2.cpp  main3.cpp
W7/: main.cpp
W8/: Main.cpp
